# padlet-py

./: LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: python-publish.yml
padlet/: __init__.py  data_models.py  main.py  wrapper.py
