[project]
name = "padlet-py"
version = "0.1.0"
dependencies = [
  "aiohttp"
]
requires-python = ">=3.12"
authors = [
  {name = "Hypurrnating"},
]
description = "A Padlet API wrapper written in python using async/await syntax"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["padlet", "padlet api", "padlet wrapper"]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/Hypurrnating/padlet-py"